--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Amit Arora
 logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+description: I am a Data Visualization Expert and an on enroute to Journey of Data Science, I am pursuing my Masters in Data Science from Arizona University
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
