--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
+title: Amit Arora
+logo: /assets/img/logo.png
+description: I am a Data Visualization Expert and an on enroute to Journey of Data Scientist, I am pursuing my Masters in Data Science from Arizona University
+show_downloads: true
 theme: jekyll-theme-minimal
