--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Amit Arora
 logo: /assets/img/logo.png
+description: <br>
 I am a Data Visualization Expert and an on enroute to Journey of Data Scientist , I am pursuing my Masters in Data Science from University of Arizona 
-description: Minimal is a theme for GitHub Pages.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
