--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Amit Arora
+title: title: <p align="center"> Amit Arora </p> 
 logo: /assets/img/logo.png
 description: 
 <br>
@@ -7,4 +7,4 @@ I am pursuing my Masters in Data Science from University of Arizona
 <br>
 </p>
 
-theme: jekyll-theme-minimal
+
